<resources>
    <string name="app_name">M-Hospital</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="sign_up">Sign Up</string>
    <string name="your_name">Your Name</string>
    <string name="your_password">Your Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="patient_name">Patient Name</string>
    <string name="department">Department</string>
    <string name="sub_department">Sub Department</string>
    <string name="name_of_the_doc">Name of the Doctor</string>
    <string name="branch_location">Branch And Location</string>
    <string name="appointment_date">Appointment Date</string>
    <string name="amount">Amount</string>
    <string name="do_you_confirm">Do you Confirm ?</string>
    <string name="proceed">Proceed</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome</string>
    <string name="FCM_defaultSenderId">763151338435</string>
    <string name="yet_to_implement">Yet to implement</string>
    <string name="enter_name">Please Enter Your Name</string>
    <string name="enter_password">Please Enter Your Password</string>
    <string name="password_length">Password length should not be less than 6 characters</string>
    <string name="renter_password">Please enter your password again</string>
    <string name="password_mismatch">Password Mismatch</string>
    <string name="enter_phone_number">Please Enter Phone Number</string>
    <string name="valid_phone_number">Please enter valid phone number</string>
    <string name="gallery_access">Phone gallery access needed</string>
    <string name="gallery_access_prevent">Please confirm phone gallery access to prevent interruptions</string>
    <string name="registration_failed">Registration Failed</string>
    <string name="try_again">Please Try Again</string>
    <string name="wrong_code">Entered Code is Wrong !!</string>
    <string name="something_went_wrong">Something went wrong !!</string>
    <string name="login_failed">Login Failed</string>
    <string name="mobile_not_registered">This mobile number is not registered with M-Hospital</string>
    <string name="wrong_password">You have entered a wrong password</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="dont_have_account">Don\'t have an account ?</string>
    <string name="_sign_up">Sign Up</string>
    <string name="loading">Loading ..</string>
    <string name="internet_connection">Internet Connection</string>
    <string name="no_connection">It seems you don\'t have internet connection</string>
    <string name="verification_failed">Verification Failed</string>
    <string name="registered_no_not_registered">Enter Your Registered Mobile Number for Verification</string>
    <string name="verify">Verify</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="otp_verification">OTP verification</string>
    <string name="password_set">Your Password has been Reset Successfully</string>
    <string name="reset_password">Reset Password</string>
    <string name="use_diff_password">Use Different Password</string>
    <string name="cannot_same_as_old">New Password cannot be same as old one</string>
    <string name="updating_failed">Updating Failed</string>
    <string name="we_have">We have sent you a code on your register mobile number</string>
    <string name="enter_code">Enter Code</string>
    <string name="submit">Submit</string>
    <string name="about_hospital">About Hospital</string>
    <string name="our_branches">Our Branches</string>
    <string name="get_location">Get Direction</string>
    <string name="searching_doctor">Searching Doctors ..</string>
    <string name="package_name">Package Name</string>
    <string name="package_details">Package Details</string>
    <string name="no_schedule">No Schedule</string>
    <string name="Hospital360View">Hospital 360 View</string>
    <string name="ExitAppp">Exit App</string>
    <string name="AreExitApp">Are you sure you want to Exit the app?</string>
    <string name="NoInternetConnection">No Internet Connection!</string>
    <string name="EnterOTP">Enter OTP</string>
    <string name="PackageBooking">Package Booking</string>
    <string name="Pleaseconfirm">Please confirm your booking, by Selecting Yes</string>
    <string name="NoDoctorsFound">No Doctors Found</string>
    <string name="n_a">N/A</string>
    <string name="HospitalInformations">Hospital Informations</string>
    <string name="BookHealthPackage">Book Health Package</string>
    <string name="SymptomsChecker">Symptoms Checker</string>
    <string name="EncyclopediaDetails">Encyclopedia Details</string>
    <string name="HealthBlog">Health Blogs</string>
    <string name="BlogDetails">Blog Details</string>
    <string name="PatientDashboard">Patient Dashboard</string>
    <string name="Departments">Departments</string>
    <string name="Delete">Delete</string>

    <string name="home">Home</string>
    <string name="message">Messages</string>
    <string name="HealthEncyclopedia">Health Encyclopedia</string>
    <string name="Paypal">PayPal</string>
    <string name="WeChat">WeChat</string>
    <string name="BaiduWallet">Baidu Wallet</string>
    <string name="HealthPackage">Health Package</string>
    <string name="BookYourDoctor">Book Your Doctor</string>
    <string name="emergency">Emergency</string>
    <string name="logout">Logout</string>
    <string name="Service">Service</string>
    <string name="Service_Packages">Service Packages</string>
    <string name="SelectHospitalBranch">Select Hospital Branch</string>
    <string name="DoctorCalendar">Doctor Calendar</string>
    <string name="DoctorSchedular">Doctor Schedular</string>
    <string name="SearchDoctorByName">Search Doctor by name</string>
    <string name="SearchSymptomsByName">Search Symptoms by name</string>
    <string name="MON">MON</string>
    <string name="SUN">SUN</string>
    <string name="TUE">TUE</string>
    <string name="WED">WED</string>
    <string name="THU">THU</string>
    <string name="FRI">FRI</string>
    <string name="SAT">SAT</string>
    <string name="AvailabilityOfDoctors">Availability of Doctor</string>
    <string name="rquestForAppointment">Request For Appointment</string>
    <string name="ok">OK</string>
    <string name="payment">Payment</string>
    <string name="payment_done">Payment Done</string>
    <string name="select_payment_mode">Select Payment Mode</string>
    <string name="possibilities">Possibilites</string>
    <string name="condition_details">Condition Details</string>
    <string name="english">English</string>
    <string name="chinese">中文</string>

    <string name="enter_code_sent">Enter Code Sent On</string>
    <string name="code">Code</string>
    <string name="resend">Resend</string>
    <string name="HealthBlogDescription">Health Blog Description</string>
    <string name="my_appointment">My\nAppointment</string>
    <string name="my_invoices">My\nInvoices</string>
    <string name="my_report">My\nReport</string>
    <string name="invoice">Invoice</string>
    <string name="report">Report</string>
    <string name="Move_resize">Move / resize to crop the picture</string>

    <string name="really_delete">Do you really want to delete this message ?</string>
    <string name="deleted_successfully">Deleted Successfully</string>
    <string name="appointments">Appointments</string>

    <string name="alipay">Alipay</string>
    <string name="apple_pay">Apple Pay</string>
    <string name="bank_card">Bank Card</string>
</resources>
