<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:minWidth="300dp"
    android:background="@drawable/bg_edtxt"
    android:gravity="center"
    >
    <TextView
        android:layout_marginBottom="5dp"
        android:layout_marginTop="25dp"
        android:textColor="#333333"
        android:textSize="@dimen/text_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_code_sent"/>
    <TextView
        android:id="@+id/shownumber"
        android:textColor="#000000"
        android:textStyle="bold"
        android:layout_margin="5dp"
        android:textSize="@dimen/text_18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       />
<EditText
    android:id="@+id/otp"
    android:hint="@string/code"
    android:textColorHint="#333333"
    android:textColor="#333333"
    android:textStyle="bold"
    android:textSize="@dimen/text_16"
    android:layout_width="wrap_content"
    android:layout_height="50dp" />

    <TextView
        android:visibility="gone"
        android:id="@+id/resend"
        android:textColor="#ff0000"
        android:text="@string/resend"
        android:layout_marginTop="10dp"
        android:textSize="@dimen/text_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <Button
        android:id="@+id/verify"
        android:background="@drawable/btn_bg"
        android:layout_width="150dp"
        android:layout_marginRight="10dp"
        android:textColor="#ffffff"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="25dp"
        android:layout_height="50dp"
        android:textSize="@dimen/text_18"
        android:text="@string/verify"/>

</LinearLayout>