<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/splashscreen"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/image_logo"
           android:adjustViewBounds="true"
            android:maxWidth="210dp"
            android:maxHeight="2000dp"
            android:layout_marginBottom="30dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/applogoblue"/>
        
        <LinearLayout
            android:id="@+id/ll1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/image_logo"
            android:layout_marginTop="10dp"
            android:layout_margin="16dp"
            android:orientation="horizontal">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button_log"
                android:layout_weight="1"
                android:background="#005dbd"
                android:textSize="@dimen/text_16"
                android:textColor="#ffffff"
                android:layout_marginRight="7dp"
                android:text="@string/login"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button_sign"
                android:layout_weight="1"
                android:background="#4BA33D"
                android:textSize="@dimen/text_16"
                android:textColor="#ffffff"
                android:layout_marginLeft="7dp"
                android:text="@string/sign_up"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_english"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/english"
            android:layout_below="@+id/ll1"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/text_16"

            />




        <TextView
            android:id="@+id/tv_chinese"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chinese"
            android:layout_below="@+id/tv_english"
            android:layout_centerHorizontal="true"
            android:padding="10dp"
            android:textSize="@dimen/text_16"
            />



    </RelativeLayout>



</RelativeLayout>