<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Rel_topmost"
        android:paddingLeft="10dp"
        android:paddingTop="40dp"
        android:paddingBottom="40dp"
        android:background="#4ba33d"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:id="@+id/image_arrow"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/backarrow"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/applogo"
            android:adjustViewBounds="true"
            android:maxWidth="180dp"
            android:maxHeight="160dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Rel_2nd"
        android:layout_below="@+id/Rel_topmost"
        android:layout_centerInParent="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_1"
            android:layout_marginTop="20dp"
            android:textSize="@dimen/text_22"
            android:gravity="center"
            android:textAllCaps="true"
            android:layout_centerHorizontal="true"
            android:text="@string/reset_password"/>


        <TextView
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_2"
            android:layout_margin="20dp"
            android:textSize="@dimen/text_16"
            android:layout_below="@+id/text_1"
            android:text="@string/we_have"
            android:maxLines="2"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText_code"
            android:layout_marginLeft="20dp"
            android:drawableLeft="@mipmap/ic_password"
            android:drawablePadding="10dp"
            android:textColor="#000000"
            android:maxLength="10"
            android:textSize="@dimen/text_16"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/text_2"
            android:backgroundTint="#4ab33d"
            android:layout_marginRight="20dp"
            android:textColorHint="#c0c0c0"
            android:hint="@string/enter_code"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText_password"
            android:layout_marginLeft="20dp"
            android:drawableLeft="@mipmap/ic_password"
            android:drawablePadding="10dp"
            android:textSize="@dimen/text_16"
            android:textColor="#000000"
            android:inputType="textPassword"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/editText_code"
            android:backgroundTint="#4ab33d"
            android:layout_marginRight="20dp"
            android:textColorHint="#c0c0c0"
            android:hint="@string/enter_new_password"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText_Repeatpassword"
            android:layout_below="@+id/editText_password"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:inputType="textPassword"
            android:textSize="@dimen/text_16"
            android:textColorHint="#c0c0c0"
            android:backgroundTint="#4ab33d"
            android:textColor="#000000"
            android:drawableLeft="@mipmap/ic_password"
            android:drawablePadding="10dp"
            android:hint="@string/repeat_password"/>


        <TextView
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/text_login"
            android:textColor="#ffffff"
            android:background="#005dbd"
            android:textSize="@dimen/text_16"
            android:text="@string/submit"
            android:textAllCaps="true"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />


    </RelativeLayout>



</RelativeLayout>