<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="350dp"
    android:background="#ffffff">



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/package_name"
                android:textSize="@dimen/text_16"
                android:layout_marginTop="10dp"
                android:textColor="@android:color/black"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                />
            <TextView
                android:id="@+id/package_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textSize="@dimen/text_16"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/colorgrey"
                android:layout_marginTop="10dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/package_details"
                android:layout_marginTop="10dp"
                android:textColor="@android:color/black"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textSize="@dimen/text_16"
                />
            <TextView
                android:id="@+id/package_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textSize="@dimen/text_16"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/colorgrey"
                android:layout_marginTop="10dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amount"
                android:layout_marginTop="10dp"
                android:textColor="@android:color/black"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textSize="@dimen/text_16"
                />
            <TextView
                android:id="@+id/fees"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textSize="@dimen/text_16"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/colorgrey"
                android:layout_marginTop="10dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/do_you_confirm"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:textSize="@dimen/text_18"
                    android:textStyle="bold"
                    android:gravity="center_vertical"
                    />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_yes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/yes"
                        android:textSize="@dimen/text_16"
                        android:layout_marginLeft="20dp"
                        android:checked="true"
                        />

                    <RadioButton
                        android:id="@+id/rb_no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no"
                        android:textSize="@dimen/text_16"
                        android:layout_marginLeft="20dp"
                        />

                </RadioGroup>
            </LinearLayout>

            <Button
                android:id="@+id/proceed"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_16"
               android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/back_bookdetails"
                android:text="@string/proceed"/>

        </LinearLayout>

