<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Rel_topmost"
        android:paddingLeft="10dp"
        android:paddingTop="40dp"
        android:paddingBottom="40dp"
        android:background="#4ba33d"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:id="@+id/image_arrow"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/backarrow"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/applogo"
            android:adjustViewBounds="true"
            android:maxWidth="180dp"
            android:maxHeight="160dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Rel_2nd"
        android:layout_below="@+id/Rel_topmost"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_1"
            android:layout_marginTop="20dp"
            android:textSize="@dimen/text_22"
            android:textAllCaps="true"
            android:layout_centerHorizontal="true"
            android:text="@string/forgot_password"/>

        <TextView
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_2"
            android:textSize="@dimen/text_16"
            android:layout_below="@+id/text_1"
            android:text="@string/registered_no_not_registered"
            android:layout_margin="20dp"/>

        <EditText
            android:id="@+id/editText_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:drawableLeft="@mipmap/ic_mobile"
            android:drawablePadding="10dp"
            android:textColor="#000000"
            android:inputType="number"
            android:maxLength="11"
            android:textSize="@dimen/text_18"
            android:layout_below="@+id/text_2"
            android:backgroundTint="#4ab33d"
            android:textColorHint="#c0c0c0"
            android:hint="@string/mobile_number"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_verify"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textColor="#ffffff"
        android:background="#005dbd"
        android:textSize="@dimen/text_16"
        android:text="@string/verify"
        android:textAllCaps="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>